# rust-web-e2e-testing

./: Cargo.toml  Makefile  README.md  db.sql
src/: db.rs  error.rs  handler.rs  http.rs  main.rs
src/tests/: mock.rs  mod.rs
